--- a/serverless.yml
+++ b/serverless.yml
@@ -8,8 +8,8 @@ provider:
     -  Effect: "Allow"
        Action:
          - "s3:PutObject"
-         - "s3:GetObject"
-         - "s3:RemoveObject"
+         - "s3:GetObject" 
+         - "s3:DeleteObject"
        Resource: "arn:aws:s3:::cs4278-asgnx-state-justinhastings/*"
     -  Effect: "Allow"
        Action:
